--- a/Code/app/src/main/res/layout/activity_extension.xml
+++ b/Code/app/src/main/res/layout/activity_extension.xml
@@ -56,17 +56,26 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center">
+                android:layout_height="match_parent">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Mass Planting Event"
+                    android:layout_centerInParent="true"
                     android:textColor="@color/colorWhite"
-                    android:textSize="20dp"
+                    android:textSize="18dp"
                     android:textStyle="bold" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="@color/colorWhite"
+                    android:background="@drawable/ico_forward"
+                    android:layout_centerInParent="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginRight="10dp"/>
 
 
             </RelativeLayout>
@@ -88,19 +97,27 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center">
+                android:layout_height="match_parent">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="Celebration Environmental Planting"
+                    android:layout_centerInParent="true"
+                    android:text="@string/Celebration_Environmental_Planting"
                     android:textColor="@color/colorWhite"
-                    android:textSize="20dp"
+                    android:textSize="18dp"
                     android:textStyle="bold" />
 
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="@color/colorWhite"
+                    android:background="@drawable/ico_forward"
+                    android:layout_centerInParent="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginRight="10dp"/>
 
             </RelativeLayout>
         </androidx.cardview.widget.CardView>
@@ -121,18 +138,27 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center">
+                android:layout_height="match_parent">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="Extension Material Prepared"
+                    android:layout_centerInParent="true"
+                    android:text="@string/Extension_Material_Prepared"
                     android:textColor="@color/colorWhite"
                     android:textSize="20dp"
                     android:textStyle="bold" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="@color/colorWhite"
+                    android:background="@drawable/ico_forward"
+                    android:layout_centerInParent="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginRight="10dp"/>
 
 
             </RelativeLayout>
