--- a/Code/app/src/main/res/layout/activity_g_f_m_c.xml
+++ b/Code/app/src/main/res/layout/activity_g_f_m_c.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".CD.JFMCActivity">
+    tools:context=".CD.JFMC.JFMCActivity">
 
     <RelativeLayout
         android:id="@+id/action_bar"
