--- a/Code/app/src/main/res/layout/activity_login.xml
+++ b/Code/app/src/main/res/layout/activity_login.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".user.LoginActivity">
 
 
@@ -34,30 +35,33 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_below="@id/action_bar">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+
         android:orientation="vertical">
 
         <LinearLayout
             android:id="@+id/LL_main"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_marginLeft="20dp"
-            android:layout_marginTop="21dp"
+
             android:layout_marginRight="20dp"
             android:orientation="vertical">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:text="Welcome, please login to your CDEGAD account!"
-                android:textColor="@color/colorBlack"
-                android:textSize="20dp" />
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:layout_width="200dp"
+                android:src="@drawable/logo_forest"
+                android:layout_gravity="center"
+                android:layout_marginTop="100dp"
+                android:layout_height="200dp">
+
+            </de.hdodenhof.circleimageview.CircleImageView>
+
 
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/EditTextOutline"
@@ -145,4 +149,4 @@
 
     </LinearLayout>
     </ScrollView>
-</RelativeLayout>
+</LinearLayout>
