--- a/Code/app/src/main/res/layout/activity_splash.xml
+++ b/Code/app/src/main/res/layout/activity_splash.xml
@@ -1,29 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:orientation="vertical"
     android:layout_height="match_parent"
+    android:background="@color/colorGreen"
     tools:context=".splash.SplashActivity">
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:layout_width="200dp"
+        android:src="@drawable/logo_forest"
+        android:layout_gravity="center"
+        android:layout_marginTop="100dp"
+        android:layout_height="200dp">
+
+    </de.hdodenhof.circleimageview.CircleImageView>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="30dp"
-        android:textColor="@color/colorBlack"
-        android:layout_marginTop="150dp"
+        android:textColor="@color/white"
+        android:layout_marginTop="15dp"
         android:text="CDEGAD"
+        android:layout_gravity="center"
+        android:textStyle="bold"
+       android:layout_centerHorizontal="true"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="30dp"
+        android:textColor="@color/white"
+        android:layout_marginTop="10dp"
+        android:text="KPK FOREST DEPT"
+        android:layout_gravity="center"
         android:textStyle="bold"
        android:layout_centerHorizontal="true"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="30dp"
-        android:textColor="@color/colorGreen"
-        android:text="KPK FOREST DEPT"
-        android:textStyle="bold"
-        android:layout_centerInParent="true"/>
 
 
-</RelativeLayout>
+
+</LinearLayout>
